--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,24 @@
     <!-- Chart.js for bar charts -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- PptxGenJS for export -->
-    <script src="https://cdn.jsdelivr.net/npm/pptxgenjs"></script>
+    <script src="https://unpkg.com/pptxgenjs@3.12.0/dist/pptxgen.bundle.js" onerror="loadPptxGenJSFallback()"></script>
+    <script>
+      function loadPptxGenJSFallback() {
+        console.log('Primary PptxGenJS CDN failed, trying fallback...');
+        var script = document.createElement('script');
+        script.src = 'https://cdn.jsdelivr.net/npm/pptxgenjs@3.12.0/dist/pptxgen.bundle.js';
+        script.onerror = function() {
+          console.log('Fallback CDN also failed, trying another...');
+          var script2 = document.createElement('script');
+          script2.src = 'https://cdnjs.cloudflare.com/ajax/libs/pptxgenjs/3.12.0/pptxgen.bundle.min.js';
+          script2.onerror = function() {
+            console.error('All PptxGenJS CDNs failed to load');
+          };
+          document.head.appendChild(script2);
+        };
+        document.head.appendChild(script);
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
