Added new themes and integrated zoom in/out controls in the toolbar

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
     <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <!-- Chart.js for bar charts -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- JSZip for PPTX theme injection -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js" integrity="sha512-XMVd28F1oH/O71fzwBnV7HucLxVwtxf26XV8P4wPk26EDxuGZ91N8bsOttmnomcCD3CS5ZMRL50H0GgOHvegtg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- PptxGenJS for export -->
     <script src="https://unpkg.com/pptxgenjs@3.12.0/dist/pptxgen.bundle.js" onerror="loadPptxGenJSFallback()"></script>
     <script>
